Copyright (c) 2003-2007 Infrae. All rights reserved.
See also LICENSE.txt

SilvaExternalSources changes

  1.5.1:
  
    Features Added:
 
      - component registration now done using Silva 2.0 zcml directives

    Bugs Fixed:

      - problem with checkboxfields (checked) when rendering a code source

      - #106231 Integer field of Code Sources cannot be empty
        Empty Integer fields now have a value of None

      - #180860 code source parameter ids must be lowercase
        They can now be mixed case.  However, multiple parameters with
        ids that differ only in case aren't supported

  1.5:
    
    Bugs Fixed:

      - the model is available in validate_to_form (when working from kupu)

  1.4

    Features added / bugs fixed: not recorded

  1.3 

    Features added:

      - Updated to work with Zope 2.10

  1.2

    Features added:

      - Users get confused when adding a Code Source that has no
        parameters.  They have to click the same button twice, once to
        add, and again to add.  Added a note that informs the user how
        to proceed.

    Bugs fixed:

      - The add form for CSV Sources was broken in that it ignored the
        file upload field.

      - CheckBox parameters in Code Sources now work as expected.
        (Thanks Benno!)

  0.13

    Features added:

      - Changed Silva External Sources to use new i18n machinery.

      - Available code sources are sorted on title when presented as a list.

    Bugs fixed:

      - Titles were not stored as unicode strings. 
        Moved the setting of the title to *after* the creation
        of the source, so that we can get an encoding from somewhere
        and use it to convert to unicode. Unfortunately this somewhere is a
        hard coded string for now, since Zope 2 doesn't seem to allow 
        anything else.
    
      - ZMI parameter forms are now utf-8 by default.

      - Fixed unicode bug when using non-ascii chars in field titles (Kupu 